<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cs349 A5</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="framerate_prompt">Set framerate to play animations at</string>
    <string name="load_animation">Load Animation</string>
    <string name="title_activity_file_explorer">FileExplorerActivity</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="parent_dir">Parent Directory</string>
    <string name="animation_key">ANIMATION</string>
    <string name="no_files">No Files</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="fastforward">Fast Forward</string>
    <string name="framerate_prefs_key">FRAMERATE</string>
    <string name="color_prefs_key">COLOR</string>
    <string name="R">R</string>
    <string name="G">G</string>
    <string name="B">B</string>
    <string name="set">Set</string>

</resources>