<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <ImageButton
        android:id="@+id/playpause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/av_play"
        android:onClick="onPlayPauseClick"
        android:contentDescription="@string/play"/>
    
    <ImageButton
        android:id="@+id/rewind_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/playpause_button"
        android:src="@drawable/av_previous"
        android:onClick="onRewindClick"
        android:contentDescription="@string/rewind"/>
    
    <ImageButton
        android:id="@+id/fastforward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/playpause_button"
        android:layout_alignParentBottom="true"
        android:src="@drawable/av_next"
        android:onClick="onFastforwardClick"
        android:contentDescription="@string/fastforward"/>
    
    <SeekBar
        android:id="@+id/animation_seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/playpause_button"
        android:layout_centerHorizontal="true"
        />
    
    <com.example.cs349a5.AnimationView
        android:id="@+id/animation_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/animation_seekbar"
        />

</RelativeLayout>